[Version] Switch to Freicoin/Tradecraft versioning scheme for version strings.
In comparison to bitcoin release numbers, we promote minor version numbers to major, so for example release "0.11.3" becomes "11.3"; we repurpose the revision number as a subproject release number, so "11.3.1" is the second release based of upstream "0.11.3"; we add a "patch" level to the version scheme, a 4th field which indicates Freicoin/Tradecraft updates within the same upstream release; and we repurpose the build number as a monotonically increasing release number.

--- a/contrib/debian/manpages/bitcoin.conf.5
+++ b/contrib/debian/manpages/bitcoin.conf.5
@@ -1,4 +1,4 @@
-.TH BITCOIN.CONF "5" "February 2016" "bitcoin.conf 0.12"
+.TH BITCOIN.CONF "5" "April 2019" "bitcoin.conf v13.2-0"
 .SH NAME
 bitcoin.conf \- bitcoin configuration file
 .SH SYNOPSIS
