--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,3 +1,11 @@
+freicoin (13.2-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
+freicoin (12.1.3.3-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
 freicoin (12.1.3.2-precise1) precise; urgency=high
 
  -- Mark Friedenbach <mark@friedenbach.org>
