--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,3 +1,7 @@
+freicoin (13.2.5.1-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
 freicoin (13.2.5-precise1) precise; urgency=high
 
  -- Mark Friedenbach <mark@friedenbach.org>
