--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,3 +1,7 @@
+bitcoin (0.14.3.1-precise1) precise; urgency=medium
+
+ -- Mark Friedenbach <mark@friedenbach.org>  Tue, 24 Jan 2021 12:00:00
+
 bitcoin (0.13.2.1-precise1) precise; urgency=medium
 
  -- Mark Friedenbach <mark@friedenbach.org>  Tue, 19 Jan 2021 12:00:00
